src/scss/main.scss
@import 'mixins';
@import 'variables';

* {
  box-sizing: border-box;
}
html {
  font-size: 20px;
  font-family: 'Merriweather', serif;
  font-weight: 300;
  @media (max-width: 768px) {
    font-size: 16px;
  }
}
body {
  margin: 0;

}
h1, h2, h3, h4 {
  margin: 0;
  margin-bottom: 1em;
  font-weight: 300;
}
p {
  margin: 0 0 .5rem;
  line-height: 1.6em;
}

a {
  color: $color-green;
  text-decoration: none;
  transition: .2s ease-out;
  &:hover {
    color: darken($color-green, 20%);
  }
}
.button {
  display: inline-block;
  padding: 15px 10%;
  font-size: .75rem;
  background-color: $color-teal;
  color: $color-white;
  text-align: center;
  border-radius: 3px;
  border-width: 0;
  &:hover {
    color: $color-white;
    background-color: darken($color-teal, 20%);
  }
}

.pre-title {
  margin-bottom: 0;
  color: $color-green;
}

.banner {
  padding: 20vh 7.5vw 15vh;
  margin-bottom: 50px;
  display: grid;
  grid-template-columns: 1.25fr .85fr;
  grid-gap: 80px;
  background-image: url('/src/images/background-image.jpg');
  background-size: cover;
  align-items: center;
  @media (max-width: 1280px) {
    display:block;
  }
  &__content {
    color: $color-white;
    @media (max-width: 1280px) {
      margin-bottom: 2rem;
    }
  }
  &__title {
    font-size: 3rem;
    font-weight: 300;
    margin-bottom: .75em;
  }
  &__description {
    font-size: 1.25rem;
    font-weight: 300;
    line-height: 1.6em;
  }
  &__aside {
    background-color: $color-white;
    padding: 50px;
  }
}
.aside {
  &__title {
    font-size: 2.25rem;
    margin-bottom: .5em;
    a {
      color: $color-black;
    }
  }
  &__description {
    line-height: 1.6em;
    margin-bottom: 1.25em;
  }
}




.site-header {
  display: grid;
  grid-template-columns: 1fr  [logo-start] minmax(100px, max-content) [logo-end]  1fr;
  grid-template-rows: [logo-start] 100px [logo-end];
  grid-gap: 5vw;
  max-width: 600px;
  max-width: max-content;
  align-items: center;
  justify-items: center;
  margin: auto;

  a {
    color: $color-black;
  }

  &__logo {
    align-self: start;
    grid-area: logo;
    display: block;
    background-color: $color-white;
    padding: 20px;
    img {
      max-width: 100%;
    }
  }
}

%column {
  margin: auto;
  max-width: 1000px;
  width: 90vw;
}

.homepage-courses {
  @extend %column;
  margin-bottom: 100px;
  
  @media (max-width: 768px) {
    h2 {
      margin: 0 0 5vw;
      text-align: center;
    }
  }
  .course {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: [image-start] repeat(5, auto) [image-end];
    grid-template-areas: 'image .'
                         'image title'
                         'image description'
                         'image button'
                         'image .';
    grid-column-gap: 3vw;
    margin-bottom: 5vw;
    align-content: center;

    img {
      grid-area: image;
      max-width: 100%;
      border-radius: 5px;
      mix-blend-mode: overlay;
      z-index: 1;
      object-fit: cover;
    }

    &__title {
      grid-area: title;
      margin: 0;
    }
    &__description {
      grid-area: description;
    }
    &__button {
      grid-area: button;
    }
    @media (max-width: 768px) {
      grid-template-columns: [image-start] 1fr [image-end];
      grid-template-areas: '.'
                           'title'
                           'description'
                           'button'
                           '.';
      grid-row-gap: 5vw;

      background-color: $color-black;
      mix-blend-mode: overlay;

      &__title, &__description, &__button {
        z-index: 10;
        color: white;
        margin: 0 5vw;
      }
    }
  }
}

.main-content {
  max-width: 1000px;
  width: 90vw;
  margin: auto;
}

.about {
  display: grid;
  grid-template-columns: 1fr minmax(500px, .75fr);
  max-width: 2000px;
  margin: auto;
  @media (max-width: 1000px) {
    display: block;
  }
  &__image {
    grid-column: 2;
    grid-row: 1;
    height: 100%;
    max-height: 55vw;
    max-width: 100%;
    object-fit: cover;
    object-position: left center;
    @media (max-width: 1000px) {
      width: 100%;
      object-position: left top;

    }
  }
  &__content {
    padding: 20px;
  }
  &__headline {
    font-size: 2rem;
  }
  &__subhead {
    font-size: 1.75rem;
    margin: 30px 0 10px;
  }
  .post {
    margin-bottom: 20px;
    &__headline {
      font-size: 1.3rem;
      margin-bottom: .25em;
    }
  }
}

.footer {
  background-color: $color-darkblue;
  color: $color-white;
  text-align: center;
  padding: 10px 0;
  margin-top: 50px;
}


.newsletter {
  background-color: $color-darkblue;
  padding: 50px 20px;
  margin-bottom: 100px;
  color: $color-white;
  &__title {
    margin-bottom: .75em;
    font-size: 1.5rem;
  }
  &__description {
    font-size: .9rem;
    margin-bottom: 1em;

  }
  & > * {
    @extend %column;
  }
  form {
    display: grid;
    grid-template-columns: 1fr minmax(100px, 300px);
    grid-gap: 20px;
  }
}

input[type="text"] {
  padding: 15px 5px;
  border-radius: 3px;
  border: 1px solid #ccc;
}

